fixup: sort out dependencies and java versions